--- a/formations.html
+++ b/formations.html
@@ -2,9 +2,31 @@
 layout: default
 title: Formations - Wescale - Improve Together
 class: formations
-
+push-date:
+    - link: "/formations/Terraform.html"
+      img: "/images/formations/terraform.png"
+      title: "Terraform"
+      fulltitle: "Formation Terraform : 4 et 5 Septembre 2018 Paris"
+      short: "Formation Terraform 2 jours"
+      badge-up: "4 <span>et</span> 5"
+      badge-down: "Septembre<br/>2018"
+    - link: "/formations/Docker-Kubernetes.html"
+      img: "/images/formations/docker-kubernetes.png"
+      title: "Docker et Kubernetes"
+      fulltitle: "Formation Docker et Kubernetes : 15 au 17 Septembre 2018 Paris"
+      short: "Formation Docker Kubernetes 3 jours"
+      badge-up: "15 <span>au</span> 17"
+      badge-down: "Octobre<br/>2018"
+    - link: "/formations/Ansible.html"
+      img: "/images/formations/ansible.png"
+      title: "Ansible"
+      fulltitle: "Formation Ansible : 29 et 30 Octobre 2018 Paris"
+      short: "Formation Ansible 2 jours"
+      badge-up: "29 <span>et</span> 30"
+      badge-down: "Octobre<br/>2018"
 
 ---
+
   <section  id="formations-top">
     <div class="container">
         <div class="row">
@@ -20,24 +42,6 @@ class: formations
                 </p>
             </div>
         </div>
-<!--        <div class="row bottom-line">
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-heartbeat" aria-hidden="true"></i>
-                    Terraform</a></h3>
-            </div>
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-share-alt" aria-hidden="true"></i>
-                    Ansible</a></h3>
-            </div>
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-magic" aria-hidden="true"></i>
-                    Kubernetes</a></h3>
-            </div>
-            <div class="col-xs-6 col-sm-3 col-md-3">
-                <h3><a class="scroll" href="#rejoindre-wescale"><i class="fa fa-smile-o" aria-hidden="true"></i>
-                    XL Release</a></h3>
-            </div>
-        </div>-->
     </div>
 </section>
         <section id="formations-dates">
@@ -49,154 +53,28 @@ class: formations
                     </div>
                 </div>
                 <div class="row">
+      {% for formation in  page.push-date %}
                     <div class="col-md-4 col-sm-6" style="text-align:center;">
-                        <a class="a-none" href="{{"/formations/Terraform.html" | relative_url }}" title="Formation Terraform : 4 et 5 Septembre 2018 Paris" >
+                        <a class="a-none" href="{{ formation.link| relative_url }}" title="{{ formation.fulltitle}}" >
                         <div class="formation-push-date">
                             <div class="row no-margin">
                                 <div class="col-xs-6">
-                                    <img src="{{"/images/formations/terraform.png"
-                                    | relative_url }}" style="max-width: 90%" alt="Formation Terraform 2 jours">
+                                    <img src="{{ formation.img
+                                    | relative_url }}" style="max-width: 90%" alt="{{ formation.short }}">
                                 </div>
                                 <div class="col-xs-6 bg-green">
-                                    <h3>4 <span style="font-size: 20px; color: #698aaa;">et</span> 5</h3>
+                                    <h3>{{ formation.badge-up }}</h3>
                                     <p class="bottom-cal">
-                                        Septembre<br/>
-                                        2018
+                                        {{ formation.badge-down }}
                                     </p>
                                 </div>
                             </div>
                             <p class="push-caption">
-                                <a href="{{"/formations/Terraform.html" | relative_url }}" title="Inscription formation Terraform">Inscrivez vous</a>
+                                <a href="{{ formation.link | relative_url }}" title="Inscription {{formation.short}}">Inscrivez vous</a>
                             </p>
                         </div></a>
                     </div>
-                    <div class="col-md-4 col-sm-6" style="text-align:center;">
-                        <div class="formation-push-date">
-
-                            <div class="row no-margin">
-                                <div class="col-xs-6">
-                                    <img src="{{"/images/formations/docker-kubernetes.png"
-                                    | relative_url }}" style="max-width: 90%">
-                                </div>
-                                <div class="col-xs-6 bg-green">
-                                    <h3>15 <span style="font-size: 20px; color: #698aaa;">au</span> 17</h3>
-                                    <p class="bottom-cal">
-                                        Octobre<br/>
-                                        2018
-                                    </p>
-                                </div>
-                            </div>
-                            <p class="push-caption">
-                                <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}">Inscrivez vous</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6" style="text-align:center;">
-                        <div class="formation-push-date">
-                            <div class="row no-margin">
-                                <div class="col-xs-6">
-                                    <img src="{{"/images/formations/ansible.png"
-                                    | relative_url }}" style="max-width: 90%">
-                                </div>
-                                <div class="col-xs-6 bg-green">
-                                    <h3>29 <span style="font-size: 20px; color: #698aaa;">et</span> 30</h3>
-                                    <p class="bottom-cal">
-                                        Octobre<br/>
-                                        2018
-                                    </p>
-                                </div>
-                            </div>
-                            <p class="push-caption">
-                                <a href="{{"/formations/Ansible.html" | relative_url }}">Inscrivez vous</a>
-                            </p>
-                        </div>
-                    </div>
-                    <!--<div class="col-md-4" style="text-align:center;">
-                        <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-docker-kubernetes-test.png"
-                        | relative_url }}"></a>
-                    </div>-->
-                    <!--                    <div class="col-md-4" style="text-align:center;">
-                                            <a href="{{"/formations/Kubernetes.html" | relative_url }}"
-                                            ><img width="350" src="{{"/images/formations/formation-kubernetes.png"
-                                            | relative_url }}" alt="Formation Kubernetes les 16 et 17 Juillet à Paris"></a>
-                                        </div>
-                                        <div class="col-md-4" style="text-align:center;">
-                                            <a href="{{"/formations/Terraform.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-terraform-test.png"
-                                            | relative_url }}"></a>
-                                        </div>-->
-                    <div class="col-md-4 col-sm-6" style="text-align:center;">
-                        <div class="formation-push-date">
-                            <div class="row no-margin">
-                                <div class="col-xs-6">
-                                    <img src="{{"/images/formations/terraform.png"
-                                    | relative_url }}" style="max-width: 90%">
-                                </div>
-                                <div class="col-xs-6 bg-green">
-                                    <h3>4 <span style="font-size: 20px; color: #698aaa;">et</span> 5</h3>
-                                    <p class="bottom-cal">
-                                        Septembre<br/>
-                                        2018
-                                    </p>
-                                </div>
-                            </div>
-                            <p class="push-caption">
-                                <a href="{{"/formations/Terraform.html" | relative_url }}">Inscrivez vous</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6" style="text-align:center;">
-                        <div class="formation-push-date">
-                            <div class="row no-margin">
-                                <div class="col-xs-6">
-                                    <img src="{{"/images/formations/docker-kubernetes.png"
-                                    | relative_url }}" style="max-width: 90%">
-                                </div>
-                                <div class="col-xs-6 bg-green">
-                                    <h3>15 <span style="font-size: 20px; color: #698aaa;">au</span> 17</h3>
-                                    <p class="bottom-cal">
-                                        Octobre<br/>
-                                        2018
-                                    </p>
-                                </div>
-                            </div>
-                            <p class="push-caption">
-                                <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}">Inscrivez vous</a>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-4 col-sm-6" style="text-align:center;">
-                        <div class="formation-push-date">
-                            <div class="row no-margin">
-                                <div class="col-xs-6">
-                                    <img src="{{"/images/formations/ansible.png"
-                                    | relative_url }}" style="max-width: 90%">
-                                </div>
-                                <div class="col-xs-6 bg-green">
-                                    <h3>29 <span style="font-size: 20px; color: #698aaa;">et</span> 30</h3>
-                                    <p class="bottom-cal">
-                                        Octobre<br/>
-                                        2018
-                                    </p>
-                                </div>
-                            </div>
-                            <p class="push-caption">
-                                <a href="{{"/formations/Ansible.html" | relative_url }}">Inscrivez vous</a>
-                            </p>
-                        </div>
-                    </div>
-                    <!--<div class="col-md-4" style="text-align:center;">
-                        <a href="{{"/formations/Docker-Kubernetes.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-docker-kubernetes-test.png"
-                        | relative_url }}"></a>
-                    </div>-->
-                    <!--                    <div class="col-md-4" style="text-align:center;">
-                                            <a href="{{"/formations/Kubernetes.html" | relative_url }}"
-                                            ><img width="350" src="{{"/images/formations/formation-kubernetes.png"
-                                            | relative_url }}" alt="Formation Kubernetes les 16 et 17 Juillet à Paris"></a>
-                                        </div>
-                                        <div class="col-md-4" style="text-align:center;">
-                                            <a href="{{"/formations/Terraform.html" | relative_url }}"><img width="350" src="{{"/images/formations/formation-terraform-test.png"
-                                            | relative_url }}"></a>
-                                        </div>-->
+      {% endfor %}
                 </div>
             </div>
             </div>
